[package]
name = "edk"
description = "Elements Dev Kit"
version = "0.1.0"
authors = ["Luca Vaccaro <me@lvaccaro.com>"]

[dependencies]
elements = { version = "0.21.1", features = ["serde"] }
elements-miniscript = { git = "https://github.com/lemarwin/elements-miniscript.git", rev = "f745a27639e073c6690b5b7229821fca439ff247"}
bitcoin = { version = "0.29.2", features = [ "serde", "rand" ] }
bdk = { version = "0.28.0" }
miniscript = { version = "9.0.0" }
electrum-client = { version = "0.7", optional = true }
bip39 = { version = "^2.0.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-normalization = "^0.1.22"
log = "0.4.14"

[features]
electrum = ["electrum-client"]
